# next-sql

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  compose.yml  next-sql.toml  test_lsp.nsql  test_parse.rs
.claude/: settings.local.json
.claude/commands/: learn-next-sql.md
.claude/skills/learn-next-sql/: SKILL.md
.claude/skills/learn-next-sql/references/: examples.md  grammar.md
.github/workflows/: deploy-pages.yml  lint-and-test.yml  publish-crates.yml  publish-vscode.yml  release-all.yml
docs/: index.html  syntax.html
docs/content/syntax/: 01-overview.md  02-queries.md  03-mutations.md  04-relations.md  05-types.md  06-expressions.md  07-joins-and-ctes.md  08-advanced.md  09-cli.md  manifest.json
docs/css/: style.css
docs/js/: syntax.js
examples/: alias-completion-demo.nsql  alias-space-demo.nsql  create-table.nsql  delete-with-subquery.nsql  distinct-and-pagination.nsql  dynamic-array-conditions.nsql  dynamic-conditional-clauses.nsql  dynamic-field-selection.nsql  dynamic-joins.nsql  dynamic-switch-case.nsql  field-completion-demo.nsql  group-by-having.nsql  insert-batch.nsql  insert-insertable.nsql  insert-many-with-variable.nsql  insert-many.nsql  insert-optional.nsql  insert.nsql  method-chaining.nsql  method-expressions.nsql  order-by-multiple.nsql  relation-basic.nsql  relation-complex.nsql  relation-nested.nsql  relation-optional.nsql  relation-with-aggregation.nsql  simple-delete.nsql  simple-select-and-join.nsql  simple-select.nsql  test-alias-completion.nsql  union.nsql  update.nsql  upsert.nsql  with-and-aggregation.nsql
examples/sample-ec-project/: analytics.nsql  customers.nsql  next-sql.toml  orders.nsql  products.nsql  reviews.nsql  schema.json  types.nsql
examples/sample-project/: next-sql.toml
examples/sample-project/migrations/20250704180205_create_users_table/: with-and-aggregation.nsql
examples/sample-project/migrations/20250706013641_create_organization_table/: down.sql  up.sql
examples/sample-project/src/: queries.nsql
migrations/20250704180205_create_users_table/: down.sql  up.sql
nextsql-backend-rust/: Cargo.toml
nextsql-backend-rust/runtime/: Cargo.toml
nextsql-backend-rust/runtime/src/: lib.rs  tokio_postgres_impl.rs
nextsql-backend-rust/src/: lib.rs  runtime_gen.rs  rust_gen.rs  sql_gen.rs  type_mapping.rs
nextsql-backend-rust/src/rust_gen/: emit.rs  mod.rs  naming.rs  query_gen.rs  type_resolve.rs  valtype.rs
nextsql-cli/: Cargo.toml  build.rs
nextsql-cli/schemas/: next-sql.schema.json
nextsql-cli/src/: config.rs  db.rs  lib.rs  main.rs  migration.rs
nextsql-cli/test-new-format/: next-sql.toml
nextsql-codegen/: Cargo.toml
nextsql-codegen/src/: lib.rs
nextsql-codegen/tests/: compile_test.rs  sample_ec_project_test.rs
nextsql-core/: Cargo.toml
nextsql-core/src/: ast.rs  config.rs  integration_tests.rs  lib.rs  nextsql.pest  parser.rs  schema.rs  schema_loader.rs  type_system.rs  type_validator.rs
nextsql-lsp/: Cargo.toml
nextsql-lsp/src/: completion.rs  diagnostics.rs  main.rs  schema_cache.rs
nextsql-lsp/src/completion/: context.rs  field_completion.rs  method_completion.rs  model_completion.rs  table_completion.rs  toml_completion.rs  type_completion.rs  utils.rs
nextsql-tokio-postgres-adapter/: Cargo.toml
nextsql-tokio-postgres-adapter/src/: lib.rs
nextsql-vscode/: .vscode-test.mjs  .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
nextsql-vscode/icons/: nsql-icon-theme.json
nextsql-vscode/schemas/: next-sql.schema.json
nextsql-vscode/src/: extension.ts
nextsql-vscode/src/test/: extension.test.ts
nextsql-vscode/syntaxes/: nextsql.tmLanguage.json
schemas/: next-sql.schema.json  users.json
scripts/: setup-dev-env.sh
src/: ast.rs  helper.rs  main.rs  migration.rs  nextsql.pest  parser.rs
tests/e2e/: Cargo.toml
tests/e2e/tests/: integration_test.rs
