[package]
name = "nextsql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command line interface for NextSQL"
publish = false

[package.metadata.dist]
dist = true

[lib]
name = "nextsql_cli"
path = "src/lib.rs"

[[bin]]
name = "nsql"
path = "src/main.rs"

[dependencies]
nextsql-core = { path = "../nextsql-core" }
nextsql-codegen = { path = "../nextsql-codegen" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
dirs = "5"
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
tempfile = "3.0"