[package]
name = "nextsql-core"
version = "0.1.0"
edition = "2021"
description = "Core parser and AST for NextSQL language"

[dependencies]
pest = { version = "2" }
pest_derive = { version = "2" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"