[package]
name = "nextsql-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core parser and AST for NextSQL language"
publish = false

[dependencies]
pest = { version = "2" }
pest_derive = { version = "2" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-postgres = "0.7"

[dev-dependencies]
tempfile = "3.0"