[package]
name = "nextsql-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for NextSQL"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "nextsql-lsp"
path = "src/main.rs"

[dependencies]
nextsql-core = { path = "../nextsql-core" }
nextsql-cli = { path = "../nextsql-cli" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pest = "2"
toml = "0.8"
jsonschema = "0.18"
regex = "1.0"
postgres = "0.19"
glob = "0.3"