[package]
name = "nextsql-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for NextSQL"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "nextsql-lsp"
path = "src/main.rs"

[dependencies]
nextsql-core = { path = "../nextsql-core" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "io-util", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pest = "2"
toml = "0.8"
regex = "1.0"
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
glob = "0.3"
