[package]
name = "nextsql-tokio-postgres-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "tokio-postgres / deadpool-postgres adapter for NextSQL runtime"
publish = true

[dependencies]
nextsql-backend-rust-runtime = { version = "0.4.2", path = "../nextsql-backend-rust/runtime", default-features = false, features = ["backend-tokio-postgres"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14" }
