[package]
name = "nextsql-backend-rust-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime support library for NextSQL generated Rust code"
publish = false

[dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
rust_decimal = { version = "1" }
serde_json = { version = "1" }

# Optional backend implementations
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
bytes = { version = "1", optional = true }

[features]
default = ["backend-tokio-postgres"]
backend-tokio-postgres = ["dep:tokio-postgres", "dep:bytes", "rust_decimal/db-tokio-postgres"]
